Fix overflows in overlays.

--- a/css/map.css
+++ b/css/map.css
@@ -76,12 +76,12 @@ body {
 
 .popup-img-container {
     margin-top: 5px;
-    overflow-x: hidden;
+    overflow: hidden;
     border: 3px solid #fff;
 }
 
 .popup-text-container{
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 10px;
 }
 
